View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026811 | Open CASCADE | OCCT:Coding | public | 2015-10-26 09:56 | 2016-04-20 15:51 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026811: Coding rules - drop unused Draw Harness command deboucle | ||||
Description | The Draw Harness command deboucle within BRepTest_FeatureCommands.cxx is used nowhere, has unclean purpose and thus should be removed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26811 has been created by kgv. SHA-1: d0436567eb45b93ae2d63bb615a94f74195d9a8f Detailed log of new commits: Author: rkv Date: Mon Oct 26 09:58:47 2015 +0300 0026811: Coding rules - drop unused Draw Harness command deboucle |
|
Please check compilation, testing is not needed. |
|
Dear BugMaster, Branch CR26811 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: d0436567eb45b93ae2d63bb615a94f74195d9a8f Number of compiler warnings: occt component: Linux: 0 (1 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) |
|
Branch CR26811 has been deleted by kgv. SHA-1: d0436567eb45b93ae2d63bb615a94f74195d9a8f |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-26 09:56 | kgv | New Issue | |
2015-10-26 09:56 | kgv | Assigned To | => kgv |
2015-10-26 09:59 | git | Note Added: 0047425 | |
2015-10-26 09:59 | kgv | Note Added: 0047426 | |
2015-10-26 09:59 | kgv | Assigned To | kgv => bugmaster |
2015-10-26 09:59 | kgv | Status | new => resolved |
2015-10-26 10:00 | kgv | Status | resolved => reviewed |
2015-10-26 12:10 |
|
Assigned To | bugmaster => apv |
2015-10-26 12:44 |
|
Test case number | => Not needed |
2015-10-27 13:24 |
|
Note Added: 0047481 | |
2015-10-27 13:24 |
|
Assigned To | apv => bugmaster |
2015-10-27 13:24 |
|
Status | reviewed => tested |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master e438ef25 |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2016-04-17 14:31 | git | Note Added: 0053186 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |