0026811: Coding rules - drop unused Draw Harness command deboucle